--- a/scss/section-pricing.scss
+++ b/scss/section-pricing.scss
@@ -107,6 +107,14 @@ $checkbox : './../res/png/Checkbox.png'; $cross : './../res/png/Cross.png';
     &--green { @include buttonBg($aquamarine) }
 }
 
+@media screen and (max-width: 1000px) {
+    .section-pricing{
+        &__card{
+            margin-bottom: 3em;
+        }
+    }
+}
+
 @media screen and (min-width :1000px ) {
     .section-pricing__cards-div {
         display: flex;
